// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH cLpaUK sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM gSaICY"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH cLpaUK sc-EHOje kAxTfU"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM dweYRF"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH hxdmqA sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM dyaQdD"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH cLpaUK sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="sc-bZQynM gSaICY"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH fweSIF sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM cCIEhP"
    disabled={false}
  >
    λ
  </span>
</div>
`;
